--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>International Pilchas</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body>
@@ -20,12 +21,13 @@
                 <button class="botonFiltro" id="europa">Europa</button>
                 <button class="botonFiltro" id="america">América</button>
                 <button class="botonFiltro" id="seleccion">Selecciones</button>
-                <a id="verCarrito"><img class="pngCarrito" src="./images/carrito.png" alt=""></a>
+                <a id="verCarrito"><img class="pngCarrito" src="./images/carrito.png" alt="Ir al carrito"></a>
             </div>
         </section>
         <section class="contenedorPrincipal">
             <div id="camisetas"></div>
             <div class="oculto" id="contenedorCarrito">
+                <div id="headerCarrito"></div>
                 <div id="carrito"></div>
                 <div id="contenedorBotonComprar">
                     <button id="botonComprar">Comprar</button>
@@ -33,8 +35,9 @@
             </div>
         </section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="./js/main.js"></script>
 </body>
-
-<script src="./js/main.js"></script>
 
 </html>
